# eirlys

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  main.py  pi.env  private.json  requirements.txt  test.py
classes/: anilistClasses.py  generalClasses.py
classes/normalCommands/: anilistClasses.py
cogs/normalCommands/: anilist.py  errorHandlers.py  general.py
cogs/slashCommands/: SLAnilist.py  SLGeneral.py
dir-B/src/: main.rs
dir-B/src/api/: mod.rs  queries.rs
dir-B/src/commands/: mod.rs
src/: main.rs
src/api/: access_db.rs  anilist_api.rs  anilist_queries.rs  database_access.rs  mod.rs  queries.rs  search_media.rs
src/api/anilist/: affinity.py  queries.py  search.py  user.py
src/api/general/: errors.py  wide_components.py  wide_functions.py
src/api/vlr/: upcoming.py
src/classes/: anilistClasses.py  defaultClasses.py  defaultFuncs.py
src/cogs/slash/: slashAni.py  slashGeneral.py  slashVal.py
src/cogs/text/: textGeneral.py
src/commands/: anilist.rs  anilist_commands.rs  gen_commands.rs  generic.rs  mod.rs
src/commands/slash/: slash_anilist.py  slash_gen.py
src/commands/text/: text_anilist.py  text_vlr.py
src/general/: gen_funcs.rs  mod.rs
