[package]
name = "eirlys_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
dotenv = "0.15"
rust_decimal = "1.32.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.23"
tracing-subscriber = "0.3.17"
serde_json = "1.0"
num-format = "0.4.4"
rand = "0.8.5"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
